@@ -1,3 +1,8 @@
+2005-05-29  Richard Henderson  <rth@redhat.com>
+
+	* readelf.c (get_alpha_dynamic_type): New.
+	(get_dynamic_type): Call it.
+
 2005-05-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* readelf.c (process_section_groups): Report group section
